# String-search-algorithms

./: CMakeLists.txt  README.md
Boyer-Moore-algorithm/: Boyer-Moore-algorithm.cpp  CMakeLists.txt
Knuth–Morris–Pratt/: CMakeLists.txt  Knuth-Morris-Pratt.cpp
