# CMakeList.txt : CMake project for Boyer-Moore-algorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Knuth-Morris-Pratt "Knuth-Morris-Pratt.cpp" )

# TODO: Add tests and install targets if needed.